@@ -111,6 +111,14 @@ simpleWarning <- function(message, call = NULL) {
     structure(list(message=as.character(message), call = call), class=class)
 }
 
+errorCondition <- function(msg, ..., class = NULL, call = NULL)
+    structure(list(message = msg, call = call, ...),
+              class = c(class, "error", "condition"))
+
+warningCondition <- function(msg, ..., class = NULL, call = NULL)
+    structure(list(message = msg, call = call, ...),
+              class = c(class, "warning", "condition"))
+
 conditionMessage <- function(c) UseMethod("conditionMessage")
 conditionCall <- function(c) UseMethod("conditionCall")
 
